[package]
name = "advent-of-code-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "01"
path = "src/01.rs"

[[bin]]
name = "02"
path = "src/02.rs"

[[bin]]
name = "03"
path = "src/03.rs"

[[bin]]
name = "04"
path = "src/04.rs"

[[bin]]
name = "05"
path = "src/05.rs"

[[bin]]
name = "06"
path = "src/06.rs"

[[bin]]
name = "07"
path = "src/07.rs"

[[bin]]
name = "08"
path = "src/08.rs"

[dependencies]
im = "15.1.0"
indicatif = "0.17.7"
itertools = "0.12.0"
regex = "1.10.2"

[profile.release]
strip = "symbols"
